fix(plugin-mermaid): set `overflow: auto` to remove scrollbar #39

--- a/packages/plugins/mermaid/src/client/style.css
+++ b/packages/plugins/mermaid/src/client/style.css
@@ -1,6 +1,6 @@
 .vuepress-mermaid {
   margin: 30px 0;
-  overflow: scroll;
+  overflow: auto;
   text-align: center;
   display: flex;
   justify-content: center;
